cargo-features = ["strip"]

[workspace]
members = [
    "crates/mk-common",
    "crates/mk-crypt",
    "crates/mk-pam",
    "crates/mk-pwd"
]

[package]
name = "mk"

license = "MIT"
version = "0.0.1"
edition = "2018"
authors = ["Sachin Cherian <sachinctl@protonmail.com>"]

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
libc = "0.2"

rpassword = "5.0"
thiserror = "1.0"
clap = "3.0.0-beta.4"

mk-common = { path = "crates/mk-common" }

mk-pwd = { path = "crates/mk-pwd" }
mk-crypt = { path = "crates/mk-crypt" }
shadow = { version = "0.0.1", optional = true }
mk-pam = { path = "crates/mk-pam", optional = true }

[features]
default = ["sdw", "mk-pam"]

# Pam authentication.
pam = ["mk-pam"]

# Shadow file authentication.
#
# The default authenticator is [`auth::passwd`], which is available on all platforms (POSIX defines `pwd.h`).
# In some cases, the user's password is defined in `/etc/shadow` instead, which we access through `shadow.h`,
# and may not be available on all systems, so we need to define a feature for it.
sdw = ["shadow"]
