[workspace]
members = [
    "crates/mk-common",
    "crates/mk-pam",
    "crates/mk-pwd",
    "crates/mk-shadow"
]

[package]
name = "mk"

license = "MIT"
version = "0.0.1"
edition = "2018"
authors = ["Sachin Cherian <sachinctl@protonmail.com>"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
libc = "0.2"

pwhash = "1.0"
rpassword = "5.0"
thiserror = "1.0"
clap = "3.0.0-beta.4"

mk-common = { path = "crates/mk-common" }

mk-pwd = { path = "crates/mk-pwd" }
mk-pam = { path = "crates/mk-pam", optional = true }
mk-shadow = { path = "crates/mk-shadow", optional = true }

[features]
# PAM authentication.
pam = ["mk-pam"]

# Shadow file authentication.
# Only available if `shadow-utils` is available.
shadow = ["mk-shadow"]

[[bin]]
name = "mk"
path = "src/bin/mk.rs"
