[workspace]
members = [
    "crates/mk-common",
    "crates/mk-pam",
    "crates/mk-shadow",
]

[package]
name = "mk"

license = "MIT"
version = "0.0.1"
readme = "README.md"
authors = ["Sachin Cherian <sachinctl@protonmail.com>"]
description = "Run commands as another user"

edition = "2021"
rust-version = "1.56"
default-run = "mk"

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1

[dependencies]
nix = "0.22"

pwhash = "1.0"
readonly = "0.2"
rpassword = "5.0"
thiserror = "1.0"

byteorder = "1.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

mk-common = { path = "crates/mk-common" }
mk-pam = { path = "crates/mk-pam", optional = true }
mk-shadow = { path = "crates/mk-shadow", optional = true }

[dependencies.clap]
version = "3.0.0-beta.4"
default-features = false
features = [
    "std",
    "suggestions",
    "color",
    "wrap_help"
]

[features]
# PAM authentication.
pam = ["mk-pam"]

# Shadow file authentication.
# Only available if `shadow.h` is available.
shadow = ["mk-shadow"]

[[bin]]
name = "mk"
path = "src/cli/bin/mk.rs"
