[package]
name = "mk-pam"

build = "build/build.rs"
license = "MIT"
version = "0.0.1"
edition = "2021"
rust-version = "1.56"
authors = ["Sachin Cherian <sachinctl@protonmail.com>"]

[dependencies]
bitflags = "1.3"
lazy_static = "1.4"
num_enum = "0.5"
readonly = "0.2"
thiserror = "1.0"

mk-common = { path = "../mk-common" }

[build-dependencies]
bindgen = "0.59"

[features]
linux-pam = []
open-pam = []
