[package]
name = "mk-pam"

license = "MIT"
version = "0.0.1"
authors = ["Sachin Cherian <sachinctl@protonmail.com>"]

build = "build/build.rs"
edition = "2021"
rust-version = "1.56"

[dependencies]
bitflags = "1.3"
lazy_static = "1.4"
num_enum = "0.5"
thiserror = "1.0"

mk-common = { path = "../mk-common" }

[build-dependencies]
bindgen = "0.59"

[features]
linux-pam = []
open-pam = []
